<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pmadera.mascotas.ContactoActivity"

    android:orientation="vertical">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"/>



    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombreContacto"
        android:theme="@style/MiEditText"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"

        />

    <EditText
        android:id="@+id/etCorreoPara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_CorreoPara"
        android:theme="@style/MiEditText"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"

        />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_mensaje"
        android:hint="@string/hint_mensaje"
        android:theme="@style/MiEditText"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"

        />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MiBotonEnvio"
        android:text="@string/texto_envio"/>


</LinearLayout>