<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaActivity">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"/>


    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_nombre"
        android:theme="@style/MiTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@id/miActionBar"/>

    <TextView
        android:id="@+id/tvCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_curso"
        android:theme="@style/MiTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@id/tvNombre"/>



    <TextView
        android:id="@+id/tvSemana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_semana"
        android:theme="@style/MiTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@id/tvCurso"/>

    <ImageView
        android:id="@+id/imgLogoAcerca"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvSemana"
        android:src="@drawable/huella"/>



</RelativeLayout>